# cnc-vouwbank-simulator

./: Cargo.toml  README.md  app.rs  db.rs  logic.rs  main.rs  sample_job.json  state.rs  ui.rs
